<resources>
    <string name="fcc_email">FCC Mail Client</string>
    <string name="user_name">user name</string>
    <string name="password">password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="todo">TODO</string>
    <string name="register_nuser">Register User</string>
    <string name="confirm_password">confirm password</string>
    <string name="choose_picture">Choose Picture</string>


    <string-array name="spinner_pic_name">

        <item>Male picture</item>
        <item>Female picture</item>
        <item>Cat picture</item>
        <item>Profile Picture 1</item>
        <item>Profile Picture 2</item>
        <item>Profile Picture 3</item>
        <item>Profile Picture 4</item>


    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="select_folder">Select Folder</string>
    <string name="inbox">Inbox</string>
    <string name="farhad">Farhad</string>
    <string name="documents_required">Documents required!</string>
    <string name="mark_unread">Mark unread</string>
    <string name="delete">Delete</string>
    <string name="send_to_spam">Send to Spam</string>
    <string name="compose">Compose</string>
    <string name="reply">Reply</string>
    <string name="mark_as_read">Mark as Read</string>
    <string name="to">To:</string>
    <string name="email_subject">email subject</string>
    <string name="send">Send</string>
    <string name="draft">Draft</string>
    <string name="message_body">message body</string>
    <string name="discard_draft">Discard draft</string>
    <string name="not_spam">Not Spam</string>
    <string name="compose_mail">Compose Mail</string>
    <string name="logout">Logout</string>
    <string name="app_name">FCC Mail Client</string>
    <string name="save_draft">Save Draft</string>
    <string name="spam">Spam</string>
    <string name="trash">Trash</string>


</resources>