<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".frag_compose_email">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/compose_email_image_view"
                android:layout_width="55dp"
                android:layout_height="46dp"
                android:layout_marginStart="45dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="17dp"
                android:layout_marginBottom="2dp"
                android:contentDescription="@string/todo"
                android:src="@drawable/ic_baseline_arrow_back_ios_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/compose_email_btn_send"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/compose_email_description_text" />

            <Button
                android:id="@+id/compose_email_btn_send"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="34dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="34dp"
                android:backgroundTint="#AAA7A7"
                android:text="@string/send"
                android:textAllCaps="false"
                android:textColor="#0B0000"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/compose_email_btn_draft"
                app:layout_constraintStart_toEndOf="@+id/compose_email_image_view"
                app:layout_constraintTop_toBottomOf="@+id/compose_email_description_text" />

            <EditText
                android:id="@+id/compose_email_subject"
                android:layout_width="302dp"
                android:layout_height="56dp"
                android:layout_marginStart="54dp"
                android:layout_marginEnd="55dp"
                android:layout_marginBottom="18dp"
                android:ems="10"
                android:hint="@string/email_subject"
                android:importantForAutofill="no"
                android:inputType="textWebEmailAddress|text"
                android:textSize="30sp"
                app:layout_constraintBottom_toTopOf="@+id/compose_email_description_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <EditText
                android:id="@+id/compose_email_description_text"
                android:layout_width="368dp"
                android:layout_height="450dp"

                android:layout_marginStart="21dp"

                android:layout_marginTop="18dp"
                android:layout_marginEnd="22dp"
                android:background="@android:drawable/divider_horizontal_bright"
                android:ems="10"
                android:gravity="top"
                android:hint="@string/message_body"
                android:importantForAutofill="no"

                android:inputType="textMultiLine|textWebEmailAddress|text"
                android:singleLine="true"

                android:textColor="#100101"
                android:textColorHint="#AFA9A9"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/compose_email_subject" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="37dp"
                android:layout_height="37dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="46dp"
                android:layout_marginBottom="22dp"
                android:text="@string/to"
                android:textColor="#0C0000"
                android:textSize="30sp"
                app:layout_constraintBottom_toTopOf="@+id/compose_email_subject"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/compose_email_btn_draft"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="67dp"
                android:backgroundTint="#AAA7A7"
                android:text="@string/draft"
                android:textAllCaps="false"
                android:textColor="#0B0000"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/compose_email_btn_send"
                app:layout_constraintTop_toBottomOf="@+id/compose_email_description_text" />

            <Button
                android:id="@+id/compose_email_btn_save_draft2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:backgroundTint="#AAA7A7"
                android:text="@string/save_draft"
                android:textAllCaps="false"
                android:textColor="#0B0000"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.426"
                app:layout_constraintStart_toEndOf="@+id/compose_email_btn_send"
                app:layout_constraintTop_toBottomOf="@+id/compose_email_description_text"
                app:layout_constraintVertical_bias="0.0" />

            <EditText
                android:id="@+id/compose_email_username"
                android:layout_width="263dp"
                android:layout_height="56dp"
                android:layout_marginStart="17dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="74dp"
                android:layout_marginBottom="17dp"
                android:ems="10"
                android:hint="@string/user_name"
                android:importantForAutofill="no"
                android:inputType="textWebEmailAddress|text"
                android:textSize="30sp"
                app:layout_constraintBottom_toTopOf="@+id/compose_email_subject"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textView3"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>