<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:drawable/editbox_dropdown_light_frame">

    <ImageView
        android:id="@+id/inbox_imageView2"
        android:layout_width="67dp"
        android:layout_height="72dp"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/todo"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/inbox_tv_user_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/display_pic_1" />

    <TextView
        android:id="@+id/inbox_tv_user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="230dp"
        android:text="@string/farhad"
        android:textColor="#100000"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/inbox_imageView2"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/inbox_tv_email_subject"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="265dp"
        android:layout_marginBottom="18dp"
        android:text="@string/documents_required"
        android:textColor="#130000"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/inbox_imageView2"
        app:layout_constraintTop_toBottomOf="@+id/inbox_tv_user_name" />
</androidx.constraintlayout.widget.ConstraintLayout>