<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".INBOX_open_email_frag">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/open_email_user"
                android:layout_width="139dp"
                android:layout_height="36dp"
                android:layout_marginStart="29dp"
                android:layout_marginTop="16dp"
                android:text="@string/farhad"
                android:textColor="#0C0101"
                android:textSize="30sp"
                app:layout_constraintStart_toEndOf="@+id/open_email_image"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/open_email_message"
                android:layout_width="349dp"
                android:layout_height="518dp"
                android:layout_marginStart="31dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="31dp"

                android:inputType="textMultiLine|textWebEmailAddress|text"
                android:singleLine="true"


                android:background="@android:drawable/divider_horizontal_bright"
                android:textColor="#190101"
                android:textSize="30sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/open_email_image" />

            <ImageView
                android:id="@+id/open_email_back"
                android:layout_width="54dp"
                android:layout_height="43dp"
                android:layout_marginStart="48dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:contentDescription="@string/todo"
                android:src="@drawable/ic_baseline_arrow_back_ios_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/open_email_reply"
                app:layout_constraintHorizontal_bias="0.54"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/open_email_message"
                app:layout_constraintVertical_bias="1.0" />

            <ImageView
                android:id="@+id/open_email_image"
                android:layout_width="74dp"
                android:layout_height="70dp"
                android:layout_marginStart="19dp"
                android:layout_marginTop="15dp"
                android:contentDescription="@string/todo"
                android:src="@drawable/cat_pic"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/open_email_subject"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="29dp"
                android:layout_marginEnd="123dp"
                android:layout_marginBottom="26dp"
                android:text="@string/documents_required"
                android:textColor="#050000"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@+id/open_email_message"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/open_email_image" />

            <Button
                android:id="@+id/open_email_reply"
                android:layout_width="106dp"
                android:layout_height="38dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="64dp"
                android:layout_marginBottom="5dp"
                android:backgroundTint="#AAA7A7"
                android:text="@string/reply"
                android:textAllCaps="false"
                android:textColor="#090000"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.275"
                app:layout_constraintStart_toEndOf="@+id/open_email_back"
                app:layout_constraintTop_toBottomOf="@+id/open_email_message"
                app:layout_constraintVertical_bias="0.0" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>