<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".TRASH_open_email_frag">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/trash_frag_email_subject"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="17dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="138dp"
                android:layout_marginBottom="17dp"
                android:text="@string/documents_required"
                android:textColor="#050000"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@+id/trash_frag_email_message"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/trash_frag_email_image"
                app:layout_constraintTop_toBottomOf="@+id/trash_frag_email_user" />

            <TextView
                android:id="@+id/trash_frag_email_user"
                android:layout_width="139dp"
                android:layout_height="36dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="13dp"
                android:layout_marginBottom="4dp"
                android:text="@string/farhad"
                android:textColor="#0C0101"
                android:textSize="30sp"
                app:layout_constraintBottom_toTopOf="@+id/trash_frag_email_subject"
                app:layout_constraintStart_toEndOf="@+id/trash_frag_email_image"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/trash_frag_email_image"
                android:layout_width="74dp"
                android:layout_height="70dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="13dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="22dp"
                android:contentDescription="@string/todo"
                android:src="@drawable/cat_pic"
                app:layout_constraintBottom_toTopOf="@+id/trash_frag_email_message"
                app:layout_constraintEnd_toStartOf="@+id/trash_frag_email_user"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/trash_frag_email_back"
                android:layout_width="54dp"
                android:layout_height="43dp"
                android:layout_marginStart="179dp"
                android:layout_marginEnd="178dp"
                android:contentDescription="@string/todo"
                android:src="@drawable/ic_baseline_arrow_back_ios_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/trash_frag_email_message" />

            <TextView
                android:id="@+id/trash_frag_email_message"
                android:layout_width="349dp"
                android:layout_height="518dp"
                android:layout_marginStart="31dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="31dp"
                android:layout_marginBottom="12dp"

                android:inputType="textMultiLine|textWebEmailAddress|text"
                android:singleLine="true"


                android:background="@android:drawable/divider_horizontal_bright"
                android:textColor="#190101"
                android:textSize="30sp"
                app:layout_constraintBottom_toTopOf="@+id/trash_frag_email_back"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/trash_frag_email_subject" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>